Paint mode + procedural map colours error #37670

Closed
opened 2013-12-01 11:02:17 +01:00 by Massimiliano Puliero · 12 comments

System Information
win7 64, gtx650 gtx560ti

Blender Version
broken at least from 2.68a
also tested on hash: 5da703e

Short description of error
in paint mode generated procedural maps pruduce too dark colours.

Exact steps for others to reproduce the error
Open the file and use the 2 brushes in "texture paint mode", one uses a generated stucci map and the other one uses an imported map, both have the same colours, but the result is totally different.
thankyou.

paintbug.zip
bug.jpg

**System Information** win7 64, gtx650 gtx560ti **Blender Version** broken at least from 2.68a also tested on hash: 5da703e **Short description of error** in paint mode generated procedural maps pruduce too dark colours. **Exact steps for others to reproduce the error** Open the file and use the 2 brushes in "texture paint mode", one uses a generated stucci map and the other one uses an imported map, both have the same colours, but the result is totally different. thankyou. [paintbug.zip](https://archive.blender.org/developer/F34984/paintbug.zip) ![bug.jpg](https://archive.blender.org/developer/F34985/bug.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @brecht

Added subscriber: @brecht

Confirmed, it seems as if the procedural texture is not converted from linear to the sRGB color space of the image.

Confirmed, it seems as if the procedural texture is not converted from linear to the sRGB color space of the image.

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski
Sergey Sharybin self-assigned this 2013-12-02 09:53:10 +01:00

Color management is my area. Will look into it.

Color management is my area. Will look into it.

Got a patch for this, but fix seems to be too much obvious. Wouldn't mind having two extra eyes.

Got a patch for this, but fix seems to be too much obvious. Wouldn't mind having two extra eyes.

This issue was referenced by blender/blender-addons-contrib@d3f3fb89cc

This issue was referenced by blender/blender-addons-contrib@d3f3fb89cc2f5745df2b2c1adb0b4db047a3303c

This issue was referenced by d3f3fb89cc

This issue was referenced by d3f3fb89cc2f5745df2b2c1adb0b4db047a3303c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d3f3fb89cc.

Closed by commit d3f3fb89cc.

Removed subscriber: @BartekMoniewski

Removed subscriber: @BartekMoniewski
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37670
No description provided.